--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,6 @@
     "autoload": {
         "psr-0": { "AcToulouse\\ClearTrustBundle": "" }
     },
-    "target-dir": "AcToulouse/ClearTrustBundle"
+    "target-dir": "AcToulouse/ClearTrustBundle",
+    "minimum-stability": "dev"
 }
