minimum-stability changed

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
             "name": "Bertrand Ailleres"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.7.*"
@@ -17,6 +18,6 @@
     "autoload": {
         "psr-0": { "AcToulouse\\ClearTrustBundle": "" }
     },
-    "target-dir": "AcToulouse/ClearTrustBundle",
-    "minimum-stability": "dev"
+    "target-dir": "AcToulouse/ClearTrustBundle"
+
 }
