minimum-stability changed

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "symfony-bundle",
     "description": "RSA ClearTrust authentication",
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "keywords": ["RSA", "ClearTrust", "Symfony2", "Authentication"],
     "homepage": "https://github.com/git-dsi-da/ClearTrustBundle",
     "license": "CeCILL-B",
