modifiy package name

--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,31 @@
 {
-    "name": "ac-toulouse/clear-trust-bundle",
-    "type": "symfony-bundle",
-    "description": "RSA ClearTrust authentication",
-    "keywords": ["RSA", "ClearTrust", "Symfony2", "Authentication"],
-    "homepage": "https://github.com/git-dsi-da/ClearTrustBundle",
-    "license": "CeCILL-B",
-    "authors": [
-        {
-            "name": "Bertrand Ailleres"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.9",
-        "symfony/symfony": "2.7.*"
+  "name": "ptsakyrellis/clear-trust-bundle",
+  "type": "symfony-bundle",
+  "description": "RSA ClearTrust authentication",
+  "keywords": [
+    "RSA",
+    "ClearTrust",
+    "Symfony2",
+    "Authentication"
+  ],
+  "homepage": "https://github.com/git-dsi-da/ClearTrustBundle",
+  "license": "CeCILL-B",
+  "authors": [
+    {
+      "name": "Bertrand Ailleres"
     },
-    "autoload": {
-        "psr-0": { "AcToulouse\\ClearTrustBundle": "" }
-    },
-    "target-dir": "AcToulouse/ClearTrustBundle"
-
+    {
+      "name": "Philippe Tsakyrellis"
+    }
+  ],
+  "require": {
+    "php": ">=7",
+    "symfony/symfony": "3.4.*"
+  },
+  "autoload": {
+    "psr-0": {
+      "AcToulouse\\ClearTrustBundle": ""
+    }
+  },
+  "target-dir": "AcToulouse/ClearTrustBundle"
 }
