--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     }
   ],
   "require": {
-    "php": ">=7",
-    "symfony/symfony": "3.4.*"
+    "php": ">=5.6",
+    "symfony/symfony": ">=2.7.*"
   },
   "autoload": {
     "psr-0": {
