--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": [
     "RSA",
     "ClearTrust",
-    "Symfony2",
+    "Symfony3",
     "Authentication"
   ],
   "homepage": "https://github.com/git-dsi-da/ClearTrustBundle",
@@ -20,7 +20,7 @@
   ],
   "require": {
     "php": ">=5.6",
-    "symfony/symfony": ">=2.7.*"
+    "symfony/symfony": ">=2.7, <4.0"
   },
   "autoload": {
     "psr-0": {
