service class update

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -38,4 +38,4 @@ services:
         public: false
 
     cleartrust.security.authentication.authenticator:
-        class:  AcToulouse\ClearTrustBundle\Security\\RSAGuardAuthenticator
+        class:  AcToulouse\ClearTrustBundle\Security\ClearTrustGuardAuthenticator
