--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -31,7 +31,7 @@ services:
 
     cleartrust.security.authentication.authenticator:
         class:  AcToulouse\ClearTrustBundle\Security\ClearTrustGuardAuthenticator
-
+        arguments: ['@cleartrust']
 
     cleartrust:
         class: AcToulouse\ClearTrustBundle\Service\ClearTrust
